src/index.css
/* ... */
body .section-block .title-and-description-block {
  padding: 32px;
  width: 100vw;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block {
  }
}
body .section-block .title-and-description-block.shift-left,
body .section-block .title-and-description-block.shift-right {
  box-sizing: border-box;
  display: block;
  flex-direction: column;
  height: 100%;
  justify-content: flex-start;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block.shift-left,
  body .section-block .title-and-description-block.shift-right {
    display: flex;
  }
}
body .section-block .title-and-description-block.shift-left {
  text-align: left;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block.shift-left {
    padding-right: 33vw;
  }
}
@media (min-width: 1200px) {
  body .section-block .title-and-description-block.shift-left {
    padding-right: 44vw;
  }
}
body .section-block .title-and-description-block.shift-right {
  text-align: right;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block.shift-right {
    padding-left: 33vw;
  }
}
@media (min-width: 1200px) {
  body .section-block .title-and-description-block.shift-right {
    padding-left: 44vw;
  }
}
body .section-block p {
  margin: 0;
}
body .section-block .title-and-description-block .title-1 {
  font-size: 24px;
  line-height: 20px;
  margin-bottom: 20px;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block .title-1 {
    font-size: 52px;
    line-height: 48px;
    margin-bottom: 30px;
  }
}
body .section-block .title-and-description-block .title-2 {
  /* font-family: 'shapiro95_super_wide';
  font-size: 26px;
  line-height: 22px; */
  font-size: 120px;
  line-height: 100px;
  margin-bottom: 15px;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block .title-2 {
    /* font-size: 76px;
    line-height: 72px; */
    font-size: 250px;
    line-height: 200px;
    margin-bottom: 30px;
  }
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block .title-2 .the {
    opacity: 0.5;
  }
}
body .section-block .title-and-description-block .description {
  font-size: 16px;
  line-height: 20px;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block .description {
    font-size: 18px;
    line-height: 24px;
  }
}
/* .section-block.text-white .title-and-description-block .title-1,
.section-block.text-white .title-and-description-block .title-2,
.section-block.text-white .title-and-description-block .description {
    text-shadow: 0 0 5px #000;
}
.section-block.text-black .title-and-description-block .title-1,
.section-block.text-black .title-and-description-block .title-2,
.section-block.text-black .title-and-description-block .description {
    text-shadow: 0 0 5px #FFF;
} */
body .section-block .title-and-description-block .bottomline {
  display: none;
  position: absolute;
  z-index: 1;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block .bottomline {
    display: block;
  }
}
/* FREE SESSION MODAL */
body .free-session-modal {
}
body .free-session-modal .title {
  font-family: 'shapiro95_super_wide';
  font-size: 24px;
  text-align: center;
}

/* HOMEPAGE */
body .make-sport-your-lifestyle {
  background-image: url('screens/homepage/images/make-sport-your-lifestyle.jpg');
  min-height: 850px;
}
@media (min-width: 992px) {
  body .make-sport-your-lifestyle {
    background-attachment: fixed;
  }
}
body .make-sport-your-lifestyle::after {
  content: '';
  background: rgba(0, 0, 0, 0.4);
  display: block;
  height: 100vh;
  min-height: 850px;
  width: 100vw;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 0;
}
body .make-sport-your-lifestyle .title-and-buttons-block {
  padding: 0 32px;
  position: relative;
  text-align: center;
  z-index: 1;
}
@media (min-width: 992px) {
  body .make-sport-your-lifestyle .title-and-buttons-block {
  }
}
body .make-sport-your-lifestyle .title-and-buttons-block .title {
  animation: 2000ms ease-out 500ms 1 both topFadeInAndSlideIn;
  font-size: 30px;
  line-height: 36px;
  margin-bottom: 80px;
}
@media (min-width: 992px) {
  body .make-sport-your-lifestyle .title-and-buttons-block .title {
    font-size: 50px;
    line-height: 56px;
    margin-bottom: 50px;
  }
}
body .make-sport-your-lifestyle .title-and-buttons-block .ar-button {
  animation: 500ms ease-out 2500ms 1 both fadeIn;
  display: block;
  margin: 0 auto 40px;
  max-width: 220px;
}
@media (min-width: 992px) {
  body .make-sport-your-lifestyle .title-and-buttons-block .ar-button {
    display: inline-block;
    margin: 0 35px;
    max-width: none;
  }
}
body .make-sport-your-lifestyle .title-and-buttons-block .ar-button.first-time-button {
  font-family: 'shapiro96_inclined_wide';
}
body .make-sport-your-lifestyle .crosscourt-big-title {
  bottom: -19.6vw;
  font-size: 45vw;
  left: -0.7vw;
  line-height: 36vw;
  margin: 0;
  opacity: 0;
  position: absolute;
  text-align: center;
  transition: opacity 100ms ease;
  width: 100vw;
  z-index: 1;
}
body .make-sport-your-lifestyle .crosscourt-big-title.anim1,
body .make-sport-your-lifestyle .crosscourt-big-title.anim20 {
  opacity: 0.1;
}
body .make-sport-your-lifestyle .crosscourt-big-title.anim2,
body .make-sport-your-lifestyle .crosscourt-big-title.anim19 {
  opacity: 0.2;
}
body .make-sport-your-lifestyle .crosscourt-big-title.anim3,
body .make-sport-your-lifestyle .crosscourt-big-title.anim18 {
  opacity: 0.3;
}
body .make-sport-your-lifestyle .crosscourt-big-title.anim4,
body .make-sport-your-lifestyle .crosscourt-big-title.anim17 {
  opacity: 0.4;
}
body .make-sport-your-lifestyle .crosscourt-big-title.anim5,
body .make-sport-your-lifestyle .crosscourt-big-title.anim16 {
  opacity: 0.5;
}
body .make-sport-your-lifestyle .crosscourt-big-title.anim6,
body .make-sport-your-lifestyle .crosscourt-big-title.anim15 {
  opacity: 0.6;
}
/* ... */

